<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllowAccessActivity"
    android:background="@color/allowBackColor">

    <ImageView
        android:id="@+id/allowImg"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/allow_access" />

    <TextView
        android:id="@+id/allowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/allowImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/allowPermissionTitle"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/allowText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/allowText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/allowPermissionDesc"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginHorizontal="24dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/allowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:padding="22dp"
        android:backgroundTint="@color/white"
        android:text="@string/allowPermissionBtn"
        android:textColor="@color/allowBackColor" />



</RelativeLayout>