<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="48dp"
    android:paddingTop="48dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/video_cat_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allowBackColor"
        android:layout_weight="1"
        android:padding="16dp"
        android:layout_marginBottom="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/movie_logo"
                android:id="@+id/movie_logo"/>
            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videoCatalogue"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_below="@id/movie_logo"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/browse_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allowBackColor"
        android:layout_weight="1"
        android:padding="16dp"
        android:layout_marginBottom="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/browse_folder_logo"
                android:id="@+id/movie_logo"/>
            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_below="@id/movie_logo"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/connect_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allowBackColor"
        android:layout_weight="1"
        android:padding="16dp"
        android:layout_marginBottom="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/connect_logo"
                android:id="@+id/movie_logo"/>
            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_below="@id/movie_logo"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>